--- a/src/app/layouts/default-layout/default-layout.component.less
+++ b/src/app/layouts/default-layout/default-layout.component.less
@@ -123,12 +123,13 @@ nz-header {
 /* Content */
 nz-content {
   margin: 0;
-  overflow-y: auto;
+  overflow: hidden;
   height: calc(100vh - 64px - 48px); // 64px header + 48px footer
 }
 
 .inner-content {
-  min-height: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 /* Footer */
