--- a/src/app/pages/tochuc/components/tochuc-form/tochuc-form.component.html
+++ b/src/app/pages/tochuc/components/tochuc-form/tochuc-form.component.html
@@ -72,7 +72,7 @@
     <div class="drawer-footer">
       <nz-space>
         <button *nzSpaceItem nz-button nzType="default" type="button" (click)="onCancel()">
-          Hủy
+          {{ 'common.cancel' | translate }}
         </button>
         <button *nzSpaceItem nz-button nzType="primary" type="submit">
           <span nz-icon nzType="save" nzTheme="outline"></span>
