--- a/src/app/pages/tochuc/components/tochuc-view/tochuc-view.component.html
+++ b/src/app/pages/tochuc/components/tochuc-view/tochuc-view.component.html
@@ -60,7 +60,7 @@
       </button>
       <button *nzSpaceItem nz-button nzType="primary" (click)="onEdit()">
         <span nz-icon nzType="edit" nzTheme="outline"></span>
-        Chỉnh sửa
+        {{ 'common.edit' | translate }}
       </button>
     </nz-space>
   </div>
